<resources>
    <string name="app_name">DaggerExample</string>
    <string name="search_repos">Search repos</string>
    <string name="github_username">Github username</string>
    <string name="test_text">TEST_TEXT</string>
    <string name="generate_token">Generate Token</string>
    <string name="here_your_token">XXXXXX</string>
    <string name="title_activity_key_store">KeyStoreActivity</string>
    <string name="github_repositories">Github repositories</string>
    <string name="android_key_store">Android Key store</string>
    <string name="keyboard">Keyboard</string>
    <string name="expires_en_xx_seg">Expira en XX seg</string>
    <string name="tu_token_digital_es">Tu token digital es</string>
    <string name="texto_encriptado">Texto encriptado:</string>
    <string name="ajwdhklaw54112">ajwdhklaw54112</string>
    <string name="encrypt">encrypt</string>
    <string name="cancel">cancel</string>
    <string name="next">next</string>
    <string name="submit">Submit</string>
    <string name="prev">previous</string>
    <string name="reset">reset</string>
    <string name="enter_count">Enter count</string>
</resources>
