<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">
    <Button
        android:id="@+id/btn_github_repos"
        style="@style/btn_default_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/github_repositories" />
    <Button
        android:id="@+id/btn_token"
        style="@style/btn_default_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_github_repos"
        android:text="@string/generate_token" />
    <Button
    android:id="@+id/btn_key_store"
    style="@style/btn_default_style"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_token"
    android:text="@string/android_key_store" />
    <Button
        android:id="@+id/btn_login_keyboard"
        style="@style/btn_default_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_key_store"
        android:text="@string/keyboard" />
</androidx.constraintlayout.widget.ConstraintLayout>