<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".keyStoreTest.ui.KeyStoreActivity">


    <EditText
        android:id="@+id/edt_key_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_encrypt"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_encrypt"
        android:text="@string/encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edt_key_store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_stc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/texto_encriptado"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_key_store" />

    <TextView
        android:id="@+id/encrypt_text"
        android:layout_width="wrap_content"
        android:maxLength="20"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_key_store"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/ajwdhklaw54112"
        app:layout_constraintStart_toEndOf="@id/txt_stc"/>


</androidx.constraintlayout.widget.ConstraintLayout>